--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "ionicons": "^7.2.1"
+        "ionicons": "^7.2.1",
+        "vuex": "^4.1.0"
     }
 }
